[gd_scene load_steps=9 format=4 uid="uid://b7ejlu7joywxd"]

[ext_resource type="Script" uid="uid://b3u53ioort16s" path="res://Scripts/LevelScripts/level.gd" id="1_vn0m0"]
[ext_resource type="PackedScene" uid="uid://bra4syws05jdo" path="res://Scenes/TileMaps/ground_grid.tscn" id="9_t5sx7"]
[ext_resource type="PackedScene" uid="uid://bll35q0808ens" path="res://Scenes/TileMaps/effect_layer.tscn" id="10_pg1s4"]
[ext_resource type="PackedScene" uid="uid://disl1khyc63rr" path="res://Scenes/TileMaps/highlight_layer.tscn" id="11_vyiab"]
[ext_resource type="PackedScene" uid="uid://djw4ditbnyjkc" path="res://Scenes/TileMaps/level_highlight_layer.tscn" id="12_qjypw"]
[ext_resource type="PackedScene" uid="uid://bf4stuuygfryp" path="res://Scenes/TileMaps/cursor_highlight_layer.tscn" id="13_se2ba"]
[ext_resource type="PackedScene" uid="uid://b2ldymljiiyjm" path="res://Scenes/TileMaps/coordinates_layer.tscn" id="14_3vidx"]
[ext_resource type="Script" uid="uid://bwcapdxjw3p7q" path="res://Scripts/LevelScripts/LevelManagers/level_manager.gd" id="15_on2c6"]

[node name="Level" type="Node2D" node_paths=PackedStringArray("GroundGrid", "EffectLayer", "HighlightLayer", "LevelHighlightLayer", "CursorHighlightLayer", "MyLevelManager")]
script = ExtResource("1_vn0m0")
GroundGrid = NodePath("GroundGrid")
EffectLayer = NodePath("EffectLayer")
HighlightLayer = NodePath("HighlightLayer")
LevelHighlightLayer = NodePath("LevelHighlightLayer")
CursorHighlightLayer = NodePath("CursorHighlightLayer")
MyLevelManager = NodePath("LevelManager")

[node name="GroundGrid" parent="." instance=ExtResource("9_t5sx7")]

[node name="EffectLayer" parent="." instance=ExtResource("10_pg1s4")]

[node name="HighlightLayer" parent="." instance=ExtResource("11_vyiab")]

[node name="LevelHighlightLayer" parent="." instance=ExtResource("12_qjypw")]

[node name="CursorHighlightLayer" parent="." instance=ExtResource("13_se2ba")]

[node name="CoordinatesLayer" parent="." instance=ExtResource("14_3vidx")]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAAAAAEAAQAAAAEAAAAAAAIAAQAAAAIAAAAAAAMAAQAAAAMAAAAAAAQAAQAAAAQAAAAAAAUAAQAAAAUAAAAAAAYAAQAAAAYAAAAAAAcAAQAAAAcAAAAAAAgAAQAAAAgAAAAAAAkAAQAAAAkAAAAAAAoAAQAAAAoAAAAAAAsAAQAAAAsAAAAAAAwAAQAAAAwAAAAAAA0AAQAAAA0AAAAAAA4AAQAAAA4AAAAAAA8AAQAAAA8AAAAAABAAAQAAABAAAAAAABEAAQAAABEAAAAAABIAAQAAABIAAAAAABMAAQAAABMAAAABAAAAAQABAAAAAAABAAEAAQABAAEAAAABAAIAAQABAAIAAAABAAMAAQABAAMAAAABAAQAAQABAAQAAAABAAUAAQABAAUAAAABAAYAAQABAAYAAAABAAcAAQABAAcAAAABAAgAAQABAAgAAAABAAkAAQABAAkAAAABAAoAAQABAAoAAAABAAsAAQABAAsAAAABAAwAAQABAAwAAAABAA0AAQABAA0AAAABAA4AAQABAA4AAAABAA8AAQABAA8AAAABABAAAQABABAAAAABABEAAQABABEAAAABABIAAQABABIAAAABABMAAQABABMAAAACAAAAAQACAAAAAAACAAEAAQACAAEAAAACAAIAAQACAAIAAAACAAMAAQACAAMAAAACAAQAAQACAAQAAAACAAUAAQACAAUAAAACAAYAAQACAAYAAAACAAcAAQACAAcAAAACAAgAAQACAAgAAAACAAkAAQACAAkAAAACAAoAAQACAAoAAAACAAsAAQACAAsAAAACAAwAAQACAAwAAAACAA0AAQACAA0AAAACAA4AAQACAA4AAAACAA8AAQACAA8AAAACABAAAQACABAAAAACABEAAQACABEAAAACABIAAQACABIAAAACABMAAQACABMAAAADAAAAAQADAAAAAAADAAEAAQADAAEAAAADAAIAAQADAAIAAAADAAMAAQADAAMAAAADAAQAAQADAAQAAAADAAUAAQADAAUAAAADAAYAAQADAAYAAAADAAcAAQADAAcAAAADAAgAAQADAAgAAAADAAkAAQADAAkAAAADAAoAAQADAAoAAAADAAsAAQADAAsAAAADAAwAAQADAAwAAAADAA0AAQADAA0AAAADAA4AAQADAA4AAAADAA8AAQADAA8AAAADABAAAQADABAAAAADABEAAQADABEAAAADABIAAQADABIAAAADABMAAQADABMAAAAEAAAAAQAEAAAAAAAEAAEAAQAEAAEAAAAEAAIAAQAEAAIAAAAEAAMAAQAEAAMAAAAEAAQAAQAEAAQAAAAEAAUAAQAEAAUAAAAEAAYAAQAEAAYAAAAEAAcAAQAEAAcAAAAEAAgAAQAEAAgAAAAEAAkAAQAEAAkAAAAEAAoAAQAEAAoAAAAEAAsAAQAEAAsAAAAEAAwAAQAEAAwAAAAEAA0AAQAEAA0AAAAEAA4AAQAEAA4AAAAEAA8AAQAEAA8AAAAEABAAAQAEABAAAAAEABEAAQAEABEAAAAEABIAAQAEABIAAAAEABMAAQAEABMAAAAFAAAAAQAFAAAAAAAFAAEAAQAFAAEAAAAFAAIAAQAFAAIAAAAFAAMAAQAFAAMAAAAFAAQAAQAFAAQAAAAFAAUAAQAFAAUAAAAFAAYAAQAFAAYAAAAFAAcAAQAFAAcAAAAFAAgAAQAFAAgAAAAFAAkAAQAFAAkAAAAFAAoAAQAFAAoAAAAFAAsAAQAFAAsAAAAFAAwAAQAFAAwAAAAFAA0AAQAFAA0AAAAFAA4AAQAFAA4AAAAFAA8AAQAFAA8AAAAFABAAAQAFABAAAAAFABEAAQAFABEAAAAFABIAAQAFABIAAAAFABMAAQAFABMAAAAGAAAAAQAGAAAAAAAGAAEAAQAGAAEAAAAGAAIAAQAGAAIAAAAGAAMAAQAGAAMAAAAGAAQAAQAGAAQAAAAGAAUAAQAGAAUAAAAGAAYAAQAGAAYAAAAGAAcAAQAGAAcAAAAGAAgAAQAGAAgAAAAGAAkAAQAGAAkAAAAGAAoAAQAGAAoAAAAGAAsAAQAGAAsAAAAGAAwAAQAGAAwAAAAGAA0AAQAGAA0AAAAGAA4AAQAGAA4AAAAGAA8AAQAGAA8AAAAGABAAAQAGABAAAAAGABEAAQAGABEAAAAGABIAAQAGABIAAAAGABMAAQAGABMAAAAHAAAAAQAHAAAAAAAHAAEAAQAHAAEAAAAHAAIAAQAHAAIAAAAHAAMAAQAHAAMAAAAHAAQAAQAHAAQAAAAHAAUAAQAHAAUAAAAHAAYAAQAHAAYAAAAHAAcAAQAHAAcAAAAHAAgAAQAHAAgAAAAHAAkAAQAHAAkAAAAHAAoAAQAHAAoAAAAHAAsAAQAHAAsAAAAHAAwAAQAHAAwAAAAHAA0AAQAHAA0AAAAHAA4AAQAHAA4AAAAHAA8AAQAHAA8AAAAHABAAAQAHABAAAAAHABEAAQAHABEAAAAHABIAAQAHABIAAAAHABMAAQAHABMAAAAIAAAAAQAIAAAAAAAIAAEAAQAIAAEAAAAIAAIAAQAIAAIAAAAIAAMAAQAIAAMAAAAIAAQAAQAIAAQAAAAIAAUAAQAIAAUAAAAIAAYAAQAIAAYAAAAIAAcAAQAIAAcAAAAIAAgAAQAIAAgAAAAIAAkAAQAIAAkAAAAIAAoAAQAIAAoAAAAIAAsAAQAIAAsAAAAIAAwAAQAIAAwAAAAIAA0AAQAIAA0AAAAIAA4AAQAIAA4AAAAIAA8AAQAIAA8AAAAIABAAAQAIABAAAAAIABEAAQAIABEAAAAIABIAAQAIABIAAAAIABMAAQAIABMAAAAJAAAAAQAJAAAAAAAJAAEAAQAJAAEAAAAJAAIAAQAJAAIAAAAJAAMAAQAJAAMAAAAJAAQAAQAJAAQAAAAJAAUAAQAJAAUAAAAJAAYAAQAJAAYAAAAJAAcAAQAJAAcAAAAJAAgAAQAJAAgAAAAJAAkAAQAJAAkAAAAJAAoAAQAJAAoAAAAJAAsAAQAJAAsAAAAJAAwAAQAJAAwAAAAJAA0AAQAJAA0AAAAJAA4AAQAJAA4AAAAJAA8AAQAJAA8AAAAJABAAAQAJABAAAAAJABEAAQAJABEAAAAJABIAAQAJABIAAAAJABMAAQAJABMAAAAKAAAAAQAKAAAAAAAKAAEAAQAKAAEAAAAKAAIAAQAKAAIAAAAKAAMAAQAKAAMAAAAKAAQAAQAKAAQAAAAKAAUAAQAKAAUAAAAKAAYAAQAKAAYAAAAKAAcAAQAKAAcAAAAKAAgAAQAKAAgAAAAKAAkAAQAKAAkAAAAKAAoAAQAKAAoAAAAKAAsAAQAKAAsAAAAKAAwAAQAKAAwAAAAKAA0AAQAKAA0AAAAKAA4AAQAKAA4AAAAKAA8AAQAKAA8AAAAKABAAAQAKABAAAAAKABEAAQAKABEAAAAKABIAAQAKABIAAAAKABMAAQAKABMAAAALAAAAAQALAAAAAAALAAEAAQALAAEAAAALAAIAAQALAAIAAAALAAMAAQALAAMAAAALAAQAAQALAAQAAAALAAUAAQALAAUAAAALAAYAAQALAAYAAAALAAcAAQALAAcAAAALAAgAAQALAAgAAAALAAkAAQALAAkAAAALAAoAAQALAAoAAAALAAsAAQALAAsAAAALAAwAAQALAAwAAAALAA0AAQALAA0AAAALAA4AAQALAA4AAAALAA8AAQALAA8AAAALABAAAQALABAAAAALABEAAQALABEAAAALABIAAQALABIAAAALABMAAQALABMAAAAMAAAAAQAMAAAAAAAMAAEAAQAMAAEAAAAMAAIAAQAMAAIAAAAMAAMAAQAMAAMAAAAMAAQAAQAMAAQAAAAMAAUAAQAMAAUAAAAMAAYAAQAMAAYAAAAMAAcAAQAMAAcAAAAMAAgAAQAMAAgAAAAMAAkAAQAMAAkAAAAMAAoAAQAMAAoAAAAMAAsAAQAMAAsAAAAMAAwAAQAMAAwAAAAMAA0AAQAMAA0AAAAMAA4AAQAMAA4AAAAMAA8AAQAMAA8AAAAMABAAAQAMABAAAAAMABEAAQAMABEAAAAMABIAAQAMABIAAAAMABMAAQAMABMAAAANAAAAAQANAAAAAAANAAEAAQANAAEAAAANAAIAAQANAAIAAAANAAMAAQANAAMAAAANAAQAAQANAAQAAAANAAUAAQANAAUAAAANAAYAAQANAAYAAAANAAcAAQANAAcAAAANAAgAAQANAAgAAAANAAkAAQANAAkAAAANAAoAAQANAAoAAAANAAsAAQANAAsAAAANAAwAAQANAAwAAAANAA0AAQANAA0AAAANAA4AAQANAA4AAAANAA8AAQANAA8AAAANABAAAQANABAAAAANABEAAQANABEAAAANABIAAQANABIAAAANABMAAQANABMAAAAOAAAAAQAOAAAAAAAOAAEAAQAOAAEAAAAOAAIAAQAOAAIAAAAOAAMAAQAOAAMAAAAOAAQAAQAOAAQAAAAOAAUAAQAOAAUAAAAOAAYAAQAOAAYAAAAOAAcAAQAOAAcAAAAOAAgAAQAOAAgAAAAOAAkAAQAOAAkAAAAOAAoAAQAOAAoAAAAOAAsAAQAOAAsAAAAOAAwAAQAOAAwAAAAOAA0AAQAOAA0AAAAOAA4AAQAOAA4AAAAOAA8AAQAOAA8AAAAOABAAAQAOABAAAAAOABEAAQAOABEAAAAOABIAAQAOABIAAAAOABMAAQAOABMAAAAPAAAAAQAPAAAAAAAPAAEAAQAPAAEAAAAPAAIAAQAPAAIAAAAPAAMAAQAPAAMAAAAPAAQAAQAPAAQAAAAPAAUAAQAPAAUAAAAPAAYAAQAPAAYAAAAPAAcAAQAPAAcAAAAPAAgAAQAPAAgAAAAPAAkAAQAPAAkAAAAPAAoAAQAPAAoAAAAPAAsAAQAPAAsAAAAPAAwAAQAPAAwAAAAPAA0AAQAPAA0AAAAPAA4AAQAPAA4AAAAPAA8AAQAPAA8AAAAPABAAAQAPABAAAAAPABEAAQAPABEAAAAPABIAAQAPABIAAAAPABMAAQAPABMAAAAQAAAAAQAQAAAAAAAQAAEAAQAQAAEAAAAQAAIAAQAQAAIAAAAQAAMAAQAQAAMAAAAQAAQAAQAQAAQAAAAQAAUAAQAQAAUAAAAQAAYAAQAQAAYAAAAQAAcAAQAQAAcAAAAQAAgAAQAQAAgAAAAQAAkAAQAQAAkAAAAQAAoAAQAQAAoAAAAQAAsAAQAQAAsAAAAQAAwAAQAQAAwAAAAQAA0AAQAQAA0AAAAQAA4AAQAQAA4AAAAQAA8AAQAQAA8AAAAQABAAAQAQABAAAAAQABEAAQAQABEAAAAQABIAAQAQABIAAAAQABMAAQAQABMAAAARAAAAAQARAAAAAAARAAEAAQARAAEAAAARAAIAAQARAAIAAAARAAMAAQARAAMAAAARAAQAAQARAAQAAAARAAUAAQARAAUAAAARAAYAAQARAAYAAAARAAcAAQARAAcAAAARAAgAAQARAAgAAAARAAkAAQARAAkAAAARAAoAAQARAAoAAAARAAsAAQARAAsAAAARAAwAAQARAAwAAAARAA0AAQARAA0AAAARAA4AAQARAA4AAAARAA8AAQARAA8AAAARABAAAQARABAAAAARABEAAQARABEAAAARABIAAQARABIAAAARABMAAQARABMAAAASAAAAAQASAAAAAAASAAEAAQASAAEAAAASAAIAAQASAAIAAAASAAMAAQASAAMAAAASAAQAAQASAAQAAAASAAUAAQASAAUAAAASAAYAAQASAAYAAAASAAcAAQASAAcAAAASAAgAAQASAAgAAAASAAkAAQASAAkAAAASAAoAAQASAAoAAAASAAsAAQASAAsAAAASAAwAAQASAAwAAAASAA0AAQASAA0AAAASAA4AAQASAA4AAAASAA8AAQASAA8AAAASABAAAQASABAAAAASABEAAQASABEAAAASABIAAQASABIAAAASABMAAQASABMAAAATAAAAAQATAAAAAAATAAEAAQATAAEAAAATAAIAAQATAAIAAAATAAMAAQATAAMAAAATAAQAAQATAAQAAAATAAUAAQATAAUAAAATAAYAAQATAAYAAAATAAcAAQATAAcAAAATAAgAAQATAAgAAAATAAkAAQATAAkAAAATAAoAAQATAAoAAAATAAsAAQATAAsAAAATAAwAAQATAAwAAAATAA0AAQATAA0AAAATAA4AAQATAA4AAAATAA8AAQATAA8AAAATABAAAQATABAAAAATABEAAQATABEAAAATABIAAQATABIAAAATABMAAQATABMAAAA=")

[node name="LevelManager" type="Node" parent="." node_paths=PackedStringArray("LevelHighlightLayer")]
script = ExtResource("15_on2c6")
LevelHighlightLayer = NodePath("../LevelHighlightLayer")
